baml_language/crates/baml_tests/snapshots/broken_syntax/namespaces_same_name/baml_tests__namespaces_same_name__02_parser__ns_http_types.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Response"
    L_BRACE "{"
    FIELD
      WORD "status"
      TYPE_EXPR "int"
        WORD "int"
    FIELD
      WORD "body"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"

=== ERRORS ===
None
